tests/ui/methods/method-on-ambiguous-numeric-type.stderr
error[E0689]: can't call method `neg` on ambiguous numeric type `{float}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:13:17
   |
LL |     let x = 2.0.neg();
   |                 ^^^
   |
help: you must specify a concrete type for this numeric value, like `f32`
   |
LL |     let x = 2.0_f32.neg();
   |                ++++

error[E0689]: can't call method `neg` on ambiguous numeric type `{float}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:17:15
   |
LL |     let x = y.neg();
   |               ^^^
   |
help: you must specify a type for this binding, like `f32`
   |
LL |     let y: f32 = 2.0;
   |          +++++

error[E0689]: can't call method `pow` on ambiguous numeric type `{integer}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:22:26
   |
LL |     for i in 0..100 {
   |         - you must specify a type for this binding, like `i32`
LL |         println!("{}", i.pow(2));
   |                          ^^^

error[E0689]: can't call method `pow` on ambiguous numeric type `{integer}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:27:15
   |
LL |     local_bar.pow(2);
   |               ^^^
   |
help: you must specify a type for this binding, like `i32`
   |
LL |     ($ident:ident) => { let $ident: i32 = 42; }
   |                                   +++++

error[E0689]: can't call method `pow` on ambiguous numeric type `{integer}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:31:18
   |
LL |     local_bar_tt.pow(2);
   |                  ^^^
   |
help: you must specify a type for this binding, like `i32`
   |
LL |     local_mac_tt!(local_bar_tt: i32);
   |                               +++++

error[E0689]: can't call method `pow` on ambiguous numeric type `{integer}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:37:9
   |
LL |     bar.pow(2);
   |         ^^^
   |
help: you must specify a type for this binding, like `i32`
  --> $DIR/auxiliary/macro-in-other-crate.rs:3:35
   |
LL |     ($ident:ident) => { let $ident: i32 = 42; }
   |                                   +++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0689`.
